feat: add splash - fix web.config redirect

--- a/src/index.html
+++ b/src/index.html
@@ -63,7 +63,17 @@
 </head>
 
 <body>
-    <app-root></app-root>
+  <app-root></app-root>
+  <div>
+    <img style="width: 100px;
+    max-width: 100px;
+    position: absolute;
+    top:0;
+    left:0;
+    right:0;
+    bottom:0;
+    margin:auto;" src="./assets/img/logo.jpg" alt="NgColombia Logo">
+  </div>
 </body>
 <script type="text/javascript"
         src="./assets/js/wall.js"></script>
